new proj/src/objects/GE_PRM_New_Product_Introduction__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account plan name  linked to this section</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipLabel>NPI Strategy</relationshipLabel>
        <relationshipName>New_Product_Introduction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Growth_Target__c</fullName>
        <inlineHelpText>If this new product/service is implemented, what will be the additional volume generated ?</inlineHelpText>
        <label>Growth Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_NPI_Req_Prod_Service_Offering__c</fullName>
        <inlineHelpText>What is the New Product/Service Introduction Requested by the Channel Partner to GE to generate an additional volume ?</inlineHelpText>
        <label>NPI Requests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_SAS__c</fullName>
        <inlineHelpText>Served Available Market = Market the channel partner could serve with this new product/service introduction</inlineHelpText>
        <label>SAS $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Specifications_Commercialization__c</fullName>
        <inlineHelpText>What are the Specifications &amp; Commercialization parameters required to succeed with the implementation of this new product/service ?</inlineHelpText>
        <label>Specifications &amp; Commercialization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_1__c</fullName>
        <formula>TEXT(GE_PRM_Account_Plan__r.GE_PRM_Tier_1__c)</formula>
        <inlineHelpText>Tier 1 P&amp;L the GE sale/channel manager depends on</inlineHelpText>
        <label>Tier 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_2__c</fullName>
        <formula>TEXT( GE_PRM_Account_Plan__r.GE_PRM_Tier_2__c )</formula>
        <inlineHelpText>Tier 2 P&amp;L the GE sale/channel manager depends on</inlineHelpText>
        <label>Tier 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_3__c</fullName>
        <formula>TEXT(GE_PRM_Account_Plan__r.GE_PRM_Tier_3__c )</formula>
        <inlineHelpText>Tier 3 P&amp;L the GE sale/channel manager depends on</inlineHelpText>
        <label>Tier 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Vertical_Industry__c</fullName>
        <inlineHelpText>What will be the Vertical industry the channel partner could cover with this new product/service introduction ?</inlineHelpText>
        <label>Vertical Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Cement and Building Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data &amp; Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment &amp; Appliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals Productions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petrochemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulp, Paper, Wood and Textiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmission &amp; Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water and Wastewater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconventional fuels (e.g. Heavy Oil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NPI Strategy</label>
    <nameField>
        <label>NPI Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Product Introduction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Plan_Is_Approved</fullName>
        <active>false</active>
        <description>If Account Plan is &apos;Approved&apos; user shouldn&apos;t be able to create or edit NPI Strategy</description>
        <errorConditionFormula>AND(AND( $Profile.Name &lt;&gt; &apos;GE_ES System Administrator&apos;, $Profile.Name &lt;&gt; &apos;System Administrator&apos;) ,ISPICKVAL( GE_PRM_Account_Plan__r.GE_PRM_Status__c , &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>You cannot create/edit NPI Strategy since Account Plan is Approved</errorMessage>
    </validationRules>
</CustomObject>